# syx-rpc-rust

./: .gitignore  Cargo.toml  README.md  demo.http
syx-rpc-rust-core/: Cargo.toml
syx-rpc-rust-core/src/: lib.rs
syx-rpc-rust-demo-api/: Cargo.toml
syx-rpc-rust-demo-api/src/: lib.rs
syx-rpc-rust-demo-consumer/: Cargo.toml
syx-rpc-rust-demo-consumer/src/: main.rs
syx-rpc-rust-demo-provider/: Cargo.toml
syx-rpc-rust-demo-provider/src/: main.rs  provider.rs
syx-rpc-rust-macro/: Cargo.toml
syx-rpc-rust-macro/src/: lib.rs
