[workspace]
members = ["syx-rpc-rust-core", "syx-rpc-rust-demo-api", "syx-rpc-rust-demo-consumer", "syx-rpc-rust-demo-provider", "syx-rpc-rust-macro"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["syx <haydnsyx@163.com>"]
edition = "2021"
license = "Apache-2.0"
description = "easy rpc framework"

[workspace.dependencies]
syx-rpc-rust-core = {path = "syx-rpc-rust-core", version = "1.0.0"}
syx-rpc-rust-macro = {path = "syx-rpc-rust-macro", version = "1.0.0"}