[package]
name = "syx-rpc-rust-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
lazy_static = "1.4.0"
reqwest = { version = "0.12.2", features = ["json"] }
async-trait = "0.1.79"
actix-web = "4.5.1"