[package]
name = "syx-rpc-rust-demo-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
syx-rpc-rust-core = {path = "../syx-rpc-rust-core", version = "1.0.0"}
syx-rpc-rust-macro = {path = "../syx-rpc-rust-macro", version = "1.0.0"}
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }