[package]
name = "syx-rpc-rust-demo-consumer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
syx-rpc-rust-core.workspace = true
syx-rpc-rust-macro.workspace = true
syx-rpc-rust-demo-api.workspace = true


tokio = { version = "1", features = ["full"] }
serde_json = "1.0.114"
actix-web = "4.5.1"