[package]
name = "syx-rpc-rust-demo-provider"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
syx-rpc-rust-core.workspace = true
syx-rpc-rust-macro.workspace = true
syx-rpc-rust-demo-api.workspace = true

actix-web = "4.5.1"
async-trait = "0.1.79"
serde_json = "1.0.114"